--- a/2.8.3/Dockerfile
+++ b/2.8.3/Dockerfile
@@ -13,7 +13,7 @@ RUN { \
 		echo 'post_max_size = 80M'; \
 		echo 'upload_max_filesize = 80M'; \
 		echo 'upload_max_filesize = 80M'; \
-	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
+	} > /usr/local/etc/php/conf.d/moodle-recommended.ini
 	
 VOLUME /var/moodledata
 VOLUME /var/www/html
