--- a/2.8.3/Dockerfile
+++ b/2.8.3/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && \
 	apt-get -y install libpng12-dev libjpeg-dev zip unzip \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
-	&& docker-php-ext-install gd curl xmlrpc intl mysqli
+	&& docker-php-ext-install gd xmlrpc intl mysqli
 	
 # set recommended PHP.ini settings
 # see https://docs.moodle.org/28/en/Installing_Moodle_on_Debian_based_distributions
