--- a/2.8.3/Dockerfile
+++ b/2.8.3/Dockerfile
@@ -3,10 +3,11 @@ FROM php:5.6-apache
 MAINTAINER Coordenadoria de Tecnologia da Informação - Quixada <ccti@quixada.ufc.br>
 
 RUN apt-get update && \
-	apt-get -y install libpng12-dev libjpeg-dev zip unzip libxml2-dev \
+	apt-get -y install libpng12-dev libjpeg-dev zip unzip libxml2-dev zlib1g-dev libicu-dev g++ \
 	&& rm -rf /var/lib/apt/lists/* \
 	&& docker-php-ext-configure gd --with-png-dir=/usr --with-jpeg-dir=/usr \
 	&& docker-php-ext-configure xmlrpc --with-libxml-dir=/usr \
+	&& docker-php-ext-configure intl \
 	&& docker-php-ext-install gd xmlrpc intl mysqli
 	
 # set recommended PHP.ini settings
